GNOME Bugzilla – Bug 677969
network: crash while switching tabs
Last modified: 2014-12-15 17:59:47 UTC
Created attachment 216227 [details] stacktrace The stacktrace makes it fairly obvious that we are not really serious about cleaning up all the signal handlers and idles we have here...
Way to reproduce the crash: 1. open network panel 2. switch to a different panel (or just to the overview) 3. select a different wifi ap in the shell menu 4. control-center crashes
Created attachment 217473 [details] [review] network: avoid crashes due to leftover signal handlers The libnm objects can survive the disposal of the network panel. If we don't disconnect the signal handlers on them, bad things can happen. Use g_signal_connect_object to tie the life-cycle of the signal handlers to the panel.
Looks good to me, thanks. Pushed to master.
*** Bug 654014 has been marked as a duplicate of this bug. ***
*** Bug 660569 has been marked as a duplicate of this bug. ***