network: avoid crashes due to leftover signal handlers

The libnm objects can survive the disposal of the network panel.
If we don't disconnect the signal handlers on them, bad things
can happen. Use g_signal_connect_object to tie the life-cycle
of the signal handlers to the panel.
https://bugzilla.gnome.org/show_bug.cgi?id=677969

Signed-off-by: Richard Hughes <richard@hughsie.com>